# ICPSearch

./: Cargo.toml  README.md
.github/workflows/: deploy.yml  rust.yml
src/: main.rs
