[package]
name = "ICPSearch"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "3.0.0-beta.1"
reqwest = { version = "0.11.22", features = ["blocking"] }
tokio = { version = "1.33.0", features = ["full"] }
base64 = "0.21.4"
futures = "0.3.28"
scraper = "0.17.1"
kuchiki = "0.8.1"