[package]
name = "ICPSearch"
version = "0.1.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "3.0.0-beta.1"
reqwest = { version = "0.11.22", features = ["blocking"] }
tokio = { version = "1.33.0", features = ["full"] }
base64 = "0.21.4"
futures = "0.3.28"
scraper = "0.17.1"
kuchiki = "0.8.1"
url = "2.4.1"
psl = "2.1.4"
rand = "0.8.5"
ahash = "0.8.7"
calamine = "0.19"
rust_xlsxwriter = "0.40"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
debug = false
panic = "abort"
